# BooBot

./: .gitignore  README.md
docs/: README.md
docs/D1/: D1.org
docs/D2/: D2.org
docs/D3/: .gitignore  D3.org
src/: README.md
src/twitch/: Cargo.toml  README.md  makefile
src/twitch/src/: config.rs  include.rs  main.rs  twitch_config.toml  twitch_config_pi.toml
